--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,4 +8,4 @@ server.ssl.key-store=tomcat.keystore
 server.ssl.key-password=Songyuliang725.
 server.ssl.key-store-type=JKS
 server.ssl.key-alias=tomcat
-
+spring.thymeleaf.prefix=classpath:/templates/
